--- a/index.html
+++ b/index.html
@@ -1,44 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario CURP</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-            margin: 50px;
-        }
-
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            margin: auto;
-        }
-
-        label {
-            font-weight: bold;
-        }
-
-        input {
-            width: 90%;
-            padding: 8px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            display: block;
-            text-align: center;
-        }
-
-        input[readonly] {
-            background-color: #eaeaea;
-        }
-    </style>
 </head>
 <body>
 
@@ -58,6 +24,8 @@
             <input type="text" id="apellidoM" readonly>
         </form>
     </div>
+
+    <link rel="stylesheet" href="app.js">
 
 </body>
 </html>
