--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <div class="loader-container" id="loader">
+        <div class="loader"></div>
+    </div>
+
     <div class="container">
         <h2>Formulario CURP</h2>
         <form>
@@ -25,7 +29,9 @@
         </form>
     </div>
 
-    <link rel="stylesheet" href="app.js">
+
+    <!-- Cargar el archivo JavaScript correctamente -->
+    <script src="app.js"></script>
 
 </body>
 </html>
